# agente-doom

./: .gitignore  .pre-commit-config.yaml  README.md  _vizdoom.ini  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: training_profiles.toml
data/scenarios/: basic.cfg  deadly_corridor.cfg
logs/PPO_LSTM_Doom_1/: events.out.tfevents.1776651649.LAPTOPASUS.12868.0  events.out.tfevents.1776720873.EduardoVaZu.22440.0
logs/PPO_LSTM_Doom_2/: events.out.tfevents.1776653772.EduardoVaZu.23928.0
logs/PPO_LSTM_Doom_3/: events.out.tfevents.1776654179.EduardoVaZu.19060.0
logs/PPO_LSTM_Doom_4/: events.out.tfevents.1776656321.EduardoVaZu.19616.0
logs/PPO_LSTM_Doom_Fast_1/: events.out.tfevents.1776664090.EduardoVaZu.2296.0
src/: cli.py  config.py  environment.py  evaluate.py  model.py  train.py
src/doom_agent/: __init__.py
src/doom_agent/cli/: evaluate.py  main.py  train.py
src/doom_agent/config/: __init__.py  profiles.py  schema.py
src/doom_agent/envs/: __init__.py  doom_env.py  reward.py
src/doom_agent/models/: __init__.py  recurrent_ppo.py
src/doom_agent/services/: __init__.py  evaluator.py  sweeps.py  trainer.py  training_support.py
src/doom_agent/shared/: __init__.py  contracts.py  types.py
src/doom_agent/utils/: __init__.py  checkpoints.py  filesystem.py  reports.py
tests/: __init__.py  test_checkpoints.py  test_config.py  test_environment.py  test_reports.py  test_sweeps.py  test_training_support.py
