[project]
name = "agente-doom"
version = "0.1.0"
description = "Proyecto de aprendizaje por refuerzo con ViZDoom y RecurrentPPO."
requires-python = ">=3.12"

[tool.mypy]
python_version = "3.12"
files = ["src", "tests"]
mypy_path = "src"
explicit_package_bases = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_optional = true
no_implicit_reexport = true
strict_equality = true
extra_checks = true
warn_return_any = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
show_error_codes = true
pretty = true

[[tool.mypy.overrides]]
module = ["tests", "tests.*", "config", "environment", "model", "train", "evaluate", "doom_agent", "doom_agent.*"]
strict = true

[[tool.mypy.overrides]]
module = ["cv2", "vizdoom", "sb3_contrib", "sb3_contrib.*", "stable_baselines3", "stable_baselines3.*"]
ignore_missing_imports = true

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501", "UP040"]
